# app/Http/Controllers/Api/PostController.php
@@ -2,10 +2,12 @@
 
 namespace App\Http\Controllers\Api;
 
+use Illuminate\Http\Request;
 use App\Enums\MessageCodeEnum;
 use App\Services\Api\PostService;
 use App\Http\Controllers\Controller;
 use App\Http\Resources\Post\PostResource;
+use App\Http\Resources\Post\PostCollection;
 use App\Http\Requests\Api\Post\StoreRequest;
 
 class PostController extends Controller
@@ -13,6 +15,22 @@ class PostController extends Controller
     public function __construct(PostService $service)
     {
         $this->service = $service;
+    }
+
+    public function list(Request $request)
+    {
+        try {
+            $this->service->attributes = $request->all();
+
+            if (!empty($list = $this->service->getList())) {
+                return $this->responseSuccess(new PostCollection($list), trans('_response.success.index'));
+            } else {
+                return $this->responseError('', MessageCodeEnum::RESOURCE_NOT_FOUND);
+            }
+        } catch (\Throwable $th) {
+            logger('Error: ' . $th->getMessage() . ' on file: ' . $th->getFile() . ':' . $th->getLine());
+            return $this->responseError(trans('_response.failed.500'), MessageCodeEnum::INTERNAL_SERVER_ERROR, 500);
+        }
     }
 
     public function store(StoreRequest $request)
@@ -28,6 +46,23 @@ class PostController extends Controller
         } catch (\Throwable $th) {
            logger('Error: ' . $th->getMessage() . ' on file: ' . $th->getFile() . ':' . $th->getLine());
            return $this->responseError(trans('_response.failed.500'), MessageCodeEnum::INTERNAL_SERVER_ERROR, 500);
+        }
+    }
+
+    public function detail(int $id)
+    {
+        try {
+            $model = $this->service->find($id);
+
+            if (!empty($model)) {
+                return $this->responseSuccess(new PostResource($model));
+            } else {
+                return $this->responseError('', MessageCodeEnum::RESOURCE_NOT_FOUND);
+            }
+        } catch (\Throwable $th) {
+            logger(' Error: ' . $th->getMessage() . ' on file: ' . $th->getFile() . ':' . $th->getLine());
+
+            return $this->responseError(trans('_response.failed.500'), MessageCodeEnum::INTERNAL_SERVER_ERROR, 500);
         }
     }
 }
